[package]
name = "naive_pose_json_completer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = {version = "0.15.2", features = ["serde-1"]}
ndarray-linalg = {version = "0.14.1", features = ["openblas-static"]}
